--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+   
 
     <!-- Title  -->
-    <title>MediMe &amp;| Home</title>
+    <title>MediMe | Home</title>
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster Two' rel='stylesheet'>
 
 </head>
 
@@ -47,7 +48,7 @@
                             <nav class="navbar h-100 navbar-expand-lg">
                                 <!-- Logo Area  -->
                                 <a class="navbar-brand" href="index.html"><img src="" alt=""
-                                        style="font-size:56px;">MediMe</a>
+                                    ><span style="font-size: 36px; font-family: 'Lobster Two'; letter-spacing: 4px;">MediMe</span> </a>
 
                                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                                     data-target="#medilifeMenu" aria-controls="medilifeMenu" aria-expanded="false"
