--- a/about-us.html
+++ b/about-us.html
@@ -46,7 +46,7 @@
                             <nav class="navbar h-100 navbar-expand-lg">
                                 <!-- Logo Area  -->
                                 <a class="navbar-brand" href="index.html"><img src="" alt=""
-                                        style="font-size:56px;">MediMe</a>
+                                    ><span style="font-size: 36px; font-family: 'Lobster Two'; letter-spacing: 4px;">MediMe</span> </a>
 
                                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                                     data-target="#medilifeMenu" aria-controls="medilifeMenu" aria-expanded="false"
