--- a/about-us.html
+++ b/about-us.html
@@ -396,7 +396,7 @@
                     <div class="col-12 col-sm-6 col-xl-3">
                         <div class="footer-widget-area">
                             <div class="footer-logo">
-                                <img src="img/core-img/logo.png" alt="">
+                                <a href=""><img src="" alt=""><span style="font-size: 56px;">MediMe</span></a> 
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                                 tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet,
